--- a/config/database.yml
+++ b/config/database.yml
@@ -5,20 +5,25 @@
 #   gem "sqlite3"
 #
 default: &default
-  adapter: sqlite3
+  adapter: postgresql
+  endcoding: unicode
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  host: localhost
+  port: 5555
+  username: postgres 
+  password: password
   timeout: 5000
 
 development:
   <<: *default
-  database: storage/development.sqlite3
+  database: facul_development
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: storage/test.sqlite3
+  database: facul_test
 
 production:
   <<: *default
